header, footer, a filters box with dropdown and results

--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -14,10 +14,8 @@
 		<header>
 		</header>
 		<div class="container">
-			<section>
-				<div class="filters">
+			<section class="filters">
 					<button>Search</button>
-				</div>
 			</section>
 		</div>
 		<footer>
