--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -14,8 +14,7 @@
 		<header>
 		</header>
 		<div class="container">
-			<section>
-				<div class="filters">
+			<section class="filters">
 					<div class="locations">
 						<h3>States</h3>
 						<h4>Carlifonia, Arizona...</h4>
@@ -41,7 +40,6 @@
 						</ul>
 					</div>
 					<button>Search</button>
-				</div>
 			</section>
 		</div>
 		<footer>
