--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -8,7 +8,8 @@
 		<link rel="stylesheet" href="styles/4-common.css">
 		<link rel="stylesheet" href="styles/3-header.css">
 		<link rel="stylesheet" href="styles/3-footer.css">
-		<link rel="stylesheet" href="styles/5-filters.css">
+		<link rel="stylesheet" href="styles/6-filters.css">
+		<link rel="stylesheet" href="styles/7-places.css">
 	</head>
 	<body>
 		<header>
@@ -18,12 +19,40 @@
 					<div class="locations">
 						<h3>States</h3>
 						<h4>Carlifonia, Arizona...</h4>
+						<ul class="popover">
+							<h2>Arizona:</h2>
+							<ul>
+								<li>Page</li>
+								<li>Page 2</li>
+							</ul>
+							<h2>Carlifonia:</h2>
+							<ul>
+								<li>Page</li>
+								<li>Page 2</li>
+							</ul>
+						</ul>
 					</div>
 					<div class="amenities">
 						<h3>Amenities</h3>
 						<h4>Internet, Kitchen...</h4>
+						<ul class="popover">
+							<li>Internet</li>
+							<li>Kitchen</li>
+						</ul>
 					</div>
 					<button>Search</button>
+			</section>
+			<h1>Places</h1>
+			<section class="places">
+				<article>
+					<h2>My Home</h2>
+				</article>
+				<article>
+					<h2>Tiny House</h2>
+				</article>
+				<article>
+					<h2>School</h2>
+				</article>
 			</section>
 		</div>
 		<footer>
